testdata/baselines/reference/submodule/conformance/parserComputedPropertyName30.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
parserComputedPropertyName30.ts(3,5): error TS1164: Computed property names are not allowed in enums.
parserComputedPropertyName30.ts(3,11): error TS2304: Cannot find name 'id'.
parserComputedPropertyName30.ts(4,5): error TS1357: An enum member name must be followed by a ',', '=', or '}'.
parserComputedPropertyName30.ts(4,5): error TS1164: Computed property names are not allowed in enums.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== parserComputedPropertyName30.ts (4 errors) ====
    enum E {
        // no ASI, comma expected
        [e] = id++
        ~~~
!!! error TS1164: Computed property names are not allowed in enums.
              ~~
!!! error TS2304: Cannot find name 'id'.
        [e2] = 1
        ~
!!! error TS1357: An enum member name must be followed by a ',', '=', or '}'.
        ~~~~
!!! error TS1164: Computed property names are not allowed in enums.
    }